Fixed bug, dynamic submit button visibility, custom return type option
The bug fixed was a bug about the 'Parameters to add' fields disappearing once it reached the max of 5, which caused the information it contained to also disappear which jinja then had a problem with as it would try to get data that doesn't exist.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,8 @@ h2
 {
     font-size: 30px;
 }
+
+.hidden
+{
+    display: none;
+}
